experiences update, minor alignment fix on intro div

--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -160,3 +160,8 @@ a {
     font-size: 1.5rem;
     text-align: left;
 }
+
+#body-intro {
+    text-align: center;
+    text-wrap: balance;
+}
